# bevy_ai_editor

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  run_all.cmd  run_editor.cmd  run_game.cmd  todos.json
apps/Axiom/: Cargo.toml
apps/Axiom/src/: main.rs
apps/Axiom/src/prompts/: road_engineer.md
apps/Axiom/src/tools/: batch.rs  bevy.rs  mod.rs
apps/Axiom/src/ui/: file_tree.rs  input.rs  top_panel.rs
assets/: asset_manifest.json  asset_rules.json
assets/models/: tree-small.glb
crates/bevy_ai_remote/: Cargo.toml  README.md
crates/bevy_ai_remote/src/: lib.rs
examples/: simple_app.rs
examples/demos/: demo_01_grid.py  demo_02_forest.py  demo_03_path.py  demo_04_custom.py  demo_05_village_gen.py  demo_07_motor_arm.py  demo_cinematic.py
examples/simple_game/src/: main.rs
python/: bevy_ai_client.py
src/: lib.rs  scanner.rs
