[package]
name = "bevy_ai_editor"
version = "0.1.0"
edition = "2021"
description = "A remote AI level editor plugin for Bevy engine"
license = "MIT"

[dependencies]
bevy = { version = "0.17.3" } # Use default features for simplicity and window support
avian3d = "0.4"
tiny_http = "0.12"
flume = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
