[package]
name = "bevy_ai_editor"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
eframe = "0.29.1"
egui = "0.29.1"
egui_extras = { version = "0.29.1", features = ["all_loaders"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
base64 = "0.22"
image = { version = "0.25", features = ["png", "jpeg"] }
arboard = "3.4"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4"] }
glob = "0.3"
lsp-types = "0.97"
url = "2.5"
dirs = "5.0"
ureq = { version = "2.10", features = ["json"] }
log = "0.4"
env_logger = "0.11"
rfd = "0.15"
glam = "0.31.0"
rayon = "1.11.0"
dotenv = "0.15.0"
