[package]
name = "bevy_ai_remote"
version = "0.1.0"
edition = "2021"
description = "Bevy plugin to enable AI-controlled editing via Axiom"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.18", default-features = false, features = ["bevy_log", "bevy_pbr", "bevy_render", "bevy_asset", "bevy_core_pipeline"] }
bevy_remote = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
